테스트코드 수정중

--- a/qa-realworld-automation/pytest.ini
+++ b/qa-realworld-automation/pytest.ini
@@ -7,4 +7,7 @@ log_cli_level = INFO
 markers =
     smoke: quick tests to verify main functionality
     regression: tests to verify no functionality has regressed after release
+    data_not_required: 테스트 실행 시 데이터 사전 조건이 필요하지 않음
+    data_required: 테스트 실행 시 데이터 사전 조건이 필요함
+    data_required_below_ten_articles: 테스트 실행 시 데이터10개 이하 사전 조건이 필요함
 junit_family = legacy
